Remove `global` argument on tailwindcss installation

--- a/tests/realistic_test_environment/css/output.css
+++ b/tests/realistic_test_environment/css/output.css
@@ -513,9 +513,9 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.bg-red-500 {
+.bg-green-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .font-bold {
